tests/macro_tests/invalid_attribute.stderr
error: unrecognised attribute
 --> $DIR/invalid_attribute.rs:7:7
  |
7 |     #[weird("")]
  |       ^^^^^

error: cannot find attribute `weird` in this scope
 --> $DIR/invalid_attribute.rs:7:7
  |
7 |     #[weird("")]
  |       ^^^^^
